# em-core

./: .gitignore  README.md  pyproject.toml  setup.ps1
src/em_core/: __init__.py  earnings.py  iv.py  locking.py  polygon.py  storage.py  universe.py
src/em_core/data/: __init__.py  universe.txt
