[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-core"
version = "0.1.0"
description = "Shared expected-move, IV, locking, earnings, and Polygon plumbing for TripWire bot and EM Dashboard."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kurt Saltrichter", email = "kurt@ivoryhill.com" }]
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "pytz>=2024.1",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
em_core = ["data/*.txt", "data/*.json"]
